@@ -21,6 +21,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
+import java.lang.reflect.Field;
+import java.lang.reflect.Modifier;
 import java.nio.charset.CharsetDecoder;
 import java.nio.charset.CodingErrorAction;
 import java.nio.charset.StandardCharsets;
@@ -28,10 +30,12 @@ import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
-import java.util.ServiceLoader;
+import java.util.Objects;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -64,39 +68,12 @@ public abstract class AbstractAnalysisFactory {
   protected final Version luceneMatchVersion;
   /** whether the luceneMatchVersion arg is explicitly specified in the serialized schema */
   private boolean isExplicitLuceneMatchVersion = false;
-  
-  /**
-   * This default ctor is required to be implemented by all subclasses because of
-   * service loader (SPI) specification, but it is never called by Lucene.
-   * <p>
-   * Subclass ctors should call: {@code throw defaultCtorException();}
-   * 
-   * @throws UnsupportedOperationException if invoked
-   * @see #defaultCtorException()
-   * @see #AbstractAnalysisFactory(Map)
-   */
-  protected AbstractAnalysisFactory() {
-    throw defaultCtorException();
-  }
-  
-  /**
-   * Helper method to be called from mandatory default constructor of
-   * all subclasses to make {@link ServiceLoader} happy.
-   * <p>
-   * Should be used in subclass ctors like: {@code throw defaultCtorException();}
-   * 
-   * @see #AbstractAnalysisFactory()
-   */
-  protected static RuntimeException defaultCtorException() {
-    return new UnsupportedOperationException("Analysis factories cannot be instantiated without arguments. " +
-        "Use applicable factory methods of TokenizerFactory, CharFilterFactory, or TokenFilterFactory.");
-  }
 
   /**
    * Initialize this factory via a set of key-value pairs.
    */
   protected AbstractAnalysisFactory(Map<String,String> args) {
-    originalArgs = Map.copyOf(args);
+    originalArgs = Collections.unmodifiableMap(new HashMap<>(args));
     String version = get(args, LUCENE_MATCH_VERSION_PARAM);
     if (version == null) {
       luceneMatchVersion = Version.LATEST;
@@ -108,7 +85,6 @@ public abstract class AbstractAnalysisFactory {
       }
     }
     args.remove(CLASS_NAME);  // consume the class arg
-    args.remove(SPI_NAME);    // consume the spi arg
   }
   
   public final Map<String,String> getOriginalArgs() {
@@ -342,8 +318,6 @@ public abstract class AbstractAnalysisFactory {
   }
 
   private static final String CLASS_NAME = "class";
-
-  private static final String SPI_NAME = "name";
   
   /**
    * @return the string used to specify the concrete class name in a serialized representation: the class arg.  
@@ -365,5 +339,41 @@ public abstract class AbstractAnalysisFactory {
 
   public void setExplicitLuceneMatchVersion(boolean isExplicitLuceneMatchVersion) {
     this.isExplicitLuceneMatchVersion = isExplicitLuceneMatchVersion;
+  }
+
+  /**
+   * Looks up SPI name (static "NAME" field) with appropriate modifiers.
+   * Also it must be a String class and declared in the concrete class.
+   * @return the SPI name
+   * @throws NoSuchFieldException - if the "NAME" field is not defined.
+   * @throws IllegalAccessException - if the "NAME" field is inaccessible.
+   * @throws IllegalStateException - if the "NAME" field does not have appropriate modifiers or isn't a String field.
+   */
+  static String lookupSPIName(Class<? extends AbstractAnalysisFactory> service) throws NoSuchFieldException, IllegalAccessException, IllegalStateException {
+    final Field field = service.getField("NAME");
+    int modifier = field.getModifiers();
+    if (Modifier.isStatic(modifier) && Modifier.isFinal(modifier) &&
+        field.getType().equals(String.class) &&
+        Objects.equals(field.getDeclaringClass(), service)) {
+      return ((String) field.get(null));
+      }
+    throw new IllegalStateException("No SPI name defined.");
+  }
+
+  /**
+   * Generate legacy SPI name derived from the class name.
+   * @return the SPI name
+   */
+  @Deprecated
+  static String generateLegacySPIName(Class<? extends AbstractAnalysisFactory> service, String[] suffixes) {
+    final String clazzName = service.getSimpleName();
+    String name = null;
+    for (String suffix : suffixes) {
+      if (clazzName.endsWith(suffix)) {
+        name = clazzName.substring(0, clazzName.length() - suffix.length()).toLowerCase(Locale.ROOT);
+        break;
+      }
+    }
+    return name;
   }
 }
