@@ -17,21 +17,19 @@
 package org.apache.lucene.analysis.util;
 
 
-import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Modifier;
+import java.util.Arrays;
 import java.util.Collections;
-import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
-import java.util.ServiceConfigurationError;
-import java.util.ServiceLoader;
+import java.util.LinkedHashMap;
 import java.util.Set;
+import java.util.ServiceConfigurationError;
 import java.util.regex.Pattern;
 
-import org.apache.lucene.util.ClassLoaderUtils;
+import org.apache.lucene.util.SPIClassIterator;
 
 /**
  * Helper class for loading named SPIs from classpath (e.g. Tokenizers, TokenStreams).
@@ -42,21 +40,27 @@ public final class AnalysisSPILoader<S extends AbstractAnalysisFactory> {
   private volatile Map<String,Class<? extends S>> services = Collections.emptyMap();
   private volatile Set<String> originalNames = Collections.emptySet();
   private final Class<S> clazz;
+  private final String[] suffixes;
 
   private static final Pattern SERVICE_NAME_PATTERN = Pattern.compile("^[a-zA-Z][a-zA-Z0-9_]+$");
 
   public AnalysisSPILoader(Class<S> clazz) {
-    this(clazz, null);
+    this(clazz, new String[] { clazz.getSimpleName() });
   }
 
-  public AnalysisSPILoader(Class<S> clazz, ClassLoader classloader) {
+  public AnalysisSPILoader(Class<S> clazz, String[] suffixes) {
+    this(clazz, suffixes, null);
+  }
+
+  public AnalysisSPILoader(Class<S> clazz, String[] suffixes, ClassLoader classloader) {
     this.clazz = clazz;
+    this.suffixes = suffixes;
     // if clazz' classloader is not a parent of the given one, we scan clazz's classloader, too:
     final ClassLoader clazzClassloader = clazz.getClassLoader();
     if (classloader == null) {
       classloader = clazzClassloader;
     }
-    if (clazzClassloader != null && !ClassLoaderUtils.isParentClassLoader(clazzClassloader, classloader)) {
+    if (clazzClassloader != null && !SPIClassIterator.isParentClassLoader(clazzClassloader, classloader)) {
       reload(clazzClassloader);
     }
     reload(classloader);
@@ -77,24 +81,23 @@ public final class AnalysisSPILoader<S extends AbstractAnalysisFactory> {
     Objects.requireNonNull(classloader, "classloader");
     final LinkedHashMap<String,Class<? extends S>> services = new LinkedHashMap<>(this.services);
     final LinkedHashSet<String> originalNames = new LinkedHashSet<>(this.originalNames);
-    ServiceLoader.load(clazz, classloader).stream().map(ServiceLoader.Provider::type).forEachOrdered(service -> {
+    final SPIClassIterator<S> loader = SPIClassIterator.get(clazz, classloader);
+    while (loader.hasNext()) {
+      final Class<? extends S> service = loader.next();
       String name = null;
       String originalName = null;
-      Throwable cause = null;
       try {
-        originalName = lookupSPIName(service);
+        originalName = AbstractAnalysisFactory.lookupSPIName(service);
         name = originalName.toLowerCase(Locale.ROOT);
         if (!isValidName(originalName)) {
           throw new ServiceConfigurationError("The name " + originalName + " for " + service.getName() +
               " is invalid: Allowed characters are (English) alphabet, digits, and underscore. It should be started with an alphabet.");
         }
       } catch (NoSuchFieldException | IllegalAccessException | IllegalStateException e) {
-        cause = e;
+        // just ignore on Lucene 8.x.
+        // we should properly handle these exceptions from Lucene 9.0.
       }
-      if (name == null) {
-        throw new ServiceConfigurationError("The class name " + service.getName() +
-            " has no service name field: [public static final String NAME]", cause);
-      }
+
       // only add the first one for each name, later services will be ignored
       // this allows to place services before others in classpath to make 
       // them used instead of others
@@ -103,12 +106,25 @@ public final class AnalysisSPILoader<S extends AbstractAnalysisFactory> {
       // Allowing it may get confusing on collisions, as different packages
       // could contain same factory class, which is a naming bug!
       // When changing this be careful to allow reload()!
-      if (!services.containsKey(name)) {
+      if (name != null && !services.containsKey(name)) {
         services.put(name, service);
         // preserve (case-sensitive) original name for reference
         originalNames.add(originalName);
       }
-    });
+
+      // register legacy spi name for backwards compatibility.
+      String legacyName = AbstractAnalysisFactory.generateLegacySPIName(service, suffixes);
+      if (legacyName == null) {
+        throw new ServiceConfigurationError("The class name " + service.getName() +
+            " has wrong suffix, allowed are: " + Arrays.toString(suffixes));
+      }
+      if (!services.containsKey(legacyName)) {
+        services.put(legacyName, service);
+        // also register this to original name set for reference
+        originalNames.add(legacyName);
+      }
+
+    }
 
     // make sure that the number of lookup keys is same to the number of original names.
     // in fact this constraint should be met in existence checks of the lookup map key,
@@ -117,8 +133,8 @@ public final class AnalysisSPILoader<S extends AbstractAnalysisFactory> {
       throw new ServiceConfigurationError("Service lookup key set is inconsistent with original name set!");
     }
 
-    this.services = Map.copyOf(services);
-    this.originalNames = Set.copyOf(originalNames);
+    this.services = Collections.unmodifiableMap(services);
+    this.originalNames = Collections.unmodifiableSet(originalNames);
   }
 
   private boolean isValidName(String name) {
@@ -144,24 +160,6 @@ public final class AnalysisSPILoader<S extends AbstractAnalysisFactory> {
   public Set<String> availableServices() {
     return originalNames;
   }  
-
-  /**
-   * Looks up SPI name (static "NAME" field) with appropriate modifiers.
-   * Also it must be a String class and declared in the concrete class.
-   * @return the SPI name
-   * @throws NoSuchFieldException - if the "NAME" field is not defined.
-   * @throws IllegalAccessException - if the "NAME" field is inaccessible.
-   * @throws IllegalStateException - if the "NAME" field does not have appropriate modifiers or isn't a String field.
-   */
-  public static String lookupSPIName(Class<? extends AbstractAnalysisFactory> service) throws NoSuchFieldException, IllegalAccessException, IllegalStateException {
-    final Field field = service.getDeclaredField("NAME");
-    int modifier = field.getModifiers();
-    if (Modifier.isPublic(modifier) && Modifier.isStatic(modifier) &&
-        Modifier.isFinal(modifier) && Objects.equals(field.getType(), String.class)) {
-      return ((String) field.get(null));
-    }
-    throw new IllegalStateException("No SPI name defined.");
-  }
   
   /** Creates a new instance of the given {@link AbstractAnalysisFactory} by invoking the constructor, passing the given argument map. */
   public static <T extends AbstractAnalysisFactory> T newFactoryClassInstance(Class<T> clazz, Map<String,String> args) {
