@@ -47,11 +47,18 @@ import org.apache.lucene.util.IOUtils;
 /**
  * Base class for Directory implementations that store index
  * files in the file system.  
- * <a id="subclasses"></a>
+ * <a name="subclasses"></a>
  * There are currently three core
  * subclasses:
  *
  * <ul>
+ *
+ *  <li>{@link SimpleFSDirectory} is a straightforward
+ *       implementation using Files.newByteChannel.
+ *       However, it has poor concurrent performance
+ *       (multiple threads will bottleneck) as it
+ *       synchronizes when multiple threads read from the
+ *       same file.
  *
  *  <li>{@link NIOFSDirectory} uses java.nio's
  *       FileChannel's positional io when reading to avoid
@@ -163,9 +170,11 @@ public abstract class FSDirectory extends BaseDirectory {
    * {@code IndexWriters} and create a new {@code FSDirectory} instance.
    *
    *  <p>Currently this returns {@link MMapDirectory} for Linux, MacOSX, Solaris,
-   *  and Windows 64-bit JREs, and {@link NIOFSDirectory} for other JREs.
-   *  It is highly recommended that you consult the implementation's documentation
-   *  for your platform before using this method.
+   *  and Windows 64-bit JREs, {@link NIOFSDirectory} for other
+   *  non-Windows JREs, and {@link SimpleFSDirectory} for other
+   *  JREs on Windows. It is highly recommended that you consult the
+   *  implementation's documentation for your platform before
+   *  using this method.
    *
    * <p><b>NOTE</b>: this method may suddenly change which
    * implementation is returned from release to release, in
@@ -185,6 +194,8 @@ public abstract class FSDirectory extends BaseDirectory {
   public static FSDirectory open(Path path, LockFactory lockFactory) throws IOException {
     if (Constants.JRE_IS_64BIT && MMapDirectory.UNMAP_SUPPORTED) {
       return new MMapDirectory(path, lockFactory);
+    } else if (Constants.WINDOWS) {
+      return new SimpleFSDirectory(path, lockFactory);
     } else {
       return new NIOFSDirectory(path, lockFactory);
     }
@@ -417,7 +428,7 @@ public abstract class FSDirectory extends BaseDirectory {
     if (pendingDeletes.isEmpty()) {
       return Collections.emptySet();
     } else {
-      return Set.copyOf(pendingDeletes);
+      return Collections.unmodifiableSet(new HashSet<>(pendingDeletes));
     }
   }
 }
