@@ -23,6 +23,7 @@ import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
@@ -42,9 +43,9 @@ import java.util.concurrent.locks.ReentrantLock;
 import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.exception.ExceptionUtils;
+import org.apache.solr.client.solrj.cloud.autoscaling.AutoScalingConfig;
 import org.apache.solr.client.solrj.cloud.DistribStateManager;
 import org.apache.solr.client.solrj.cloud.SolrCloudManager;
-import org.apache.solr.client.solrj.cloud.autoscaling.AutoScalingConfig;
 import org.apache.solr.client.solrj.cloud.autoscaling.TriggerEventProcessorStage;
 import org.apache.solr.client.solrj.cloud.autoscaling.VersionedData;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest.RequestStatusResponse;
@@ -57,7 +58,7 @@ import org.apache.solr.common.util.ExecutorUtil;
 import org.apache.solr.common.util.IOUtils;
 import org.apache.solr.common.util.Utils;
 import org.apache.solr.core.SolrResourceLoader;
-import org.apache.solr.common.util.SolrNamedThreadFactory;
+import org.apache.solr.util.DefaultSolrThreadFactory;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -140,10 +141,10 @@ public class ScheduledTriggers implements Closeable {
 
   public ScheduledTriggers(SolrResourceLoader loader, SolrCloudManager cloudManager) {
     scheduledThreadPoolExecutor = (ScheduledThreadPoolExecutor) Executors.newScheduledThreadPool(DEFAULT_TRIGGER_CORE_POOL_SIZE,
-        new SolrNamedThreadFactory("ScheduledTrigger"));
+        new DefaultSolrThreadFactory("ScheduledTrigger"));
     scheduledThreadPoolExecutor.setRemoveOnCancelPolicy(true);
     scheduledThreadPoolExecutor.setExecuteExistingDelayedTasksAfterShutdownPolicy(false);
-    actionExecutor = ExecutorUtil.newMDCAwareSingleThreadExecutor(new SolrNamedThreadFactory("AutoscalingActionExecutor"));
+    actionExecutor = ExecutorUtil.newMDCAwareSingleThreadExecutor(new DefaultSolrThreadFactory("AutoscalingActionExecutor"));
     this.cloudManager = cloudManager;
     this.stateManager = cloudManager.getDistribStateManager();
     this.loader = loader;
@@ -171,9 +172,7 @@ public class ScheduledTriggers implements Closeable {
       Map<String, Object> newProps = autoScalingConfig.getProperties();
       String key = entry.getKey();
       if (newProps.containsKey(key) && !entry.getValue().equals(newProps.get(key))) {
-        if (log.isDebugEnabled()) {
-          log.debug("Changing value of autoscaling property: {} from: {} to: {}", key, entry.getValue(), newProps.get(key));
-        }
+        log.debug("Changing value of autoscaling property: {} from: {} to: {}", key, entry.getValue(), newProps.get(key));
         switch (key) {
           case TRIGGER_SCHEDULE_DELAY_SECONDS:
             triggerDelay.set(((Number) newProps.get(key)).intValue());
@@ -225,9 +224,9 @@ public class ScheduledTriggers implements Closeable {
         throw new AlreadyClosedException("ScheduledTriggers has been closed and cannot be used anymore");
       }
       if (cloudManager.isClosed()) {
-        log.error("Failed to add trigger {} - closing or disconnected from data provider", newTrigger.getName(), e);
+        log.error("Failed to add trigger " + newTrigger.getName() + " - closing or disconnected from data provider", e);
       } else {
-        log.error("Failed to add trigger {}", newTrigger.getName(), e);
+        log.error("Failed to add trigger " + newTrigger.getName(), e);
       }
       return;
     }
@@ -269,7 +268,7 @@ public class ScheduledTriggers implements Closeable {
         return false;
       }
       if (event.isIgnored())  {
-        log.debug("-------- Ignoring event: {}", event);
+        log.debug("-------- Ignoring event: " + event);
         event.getProperties().put(TriggerEvent.IGNORED, true);
         triggerListeners.fireListeners(event.getSource(), event, TriggerEventProcessorStage.IGNORED, "Event was ignored.");
         return true; // always return true for ignored events
@@ -277,12 +276,12 @@ public class ScheduledTriggers implements Closeable {
       // even though we pause all triggers during action execution there is a possibility that a trigger was already
       // running at the time and would have already created an event so we reject such events during cooldown period
       if (cooldownStart.get() + cooldownPeriod.get() > cloudManager.getTimeSource().getTimeNs()) {
-        log.debug("-------- Cooldown period - rejecting event: {}", event);
+        log.debug("-------- Cooldown period - rejecting event: " + event);
         event.getProperties().put(TriggerEvent.COOLDOWN, true);
         triggerListeners.fireListeners(event.getSource(), event, TriggerEventProcessorStage.IGNORED, "In cooldown period.");
         return false;
       } else {
-        log.debug("++++++++ Cooldown inactive - processing event: {}", event);
+        log.debug("++++++++ Cooldown inactive - processing event: " + event);
         // start cooldown here to immediately reject other events
         cooldownStart.set(cloudManager.getTimeSource().getTimeNs());
       }
@@ -312,7 +311,7 @@ public class ScheduledTriggers implements Closeable {
             assert hasPendingActions.get();
             long eventProcessingStart = cloudManager.getTimeSource().getTimeNs();
             TriggerListeners triggerListeners1 = triggerListeners.copy();
-            log.debug("-- processing actions for {}", event);
+            log.debug("-- processing actions for " + event);
             try {
               // in future, we could wait for pending tasks in a different thread and re-enqueue
               // this event so that we continue processing other events and not block this action executor
@@ -320,7 +319,6 @@ public class ScheduledTriggers implements Closeable {
 
               ActionContext actionContext = new ActionContext(cloudManager, newTrigger, new HashMap<>());
               for (TriggerAction action : actions) {
-                @SuppressWarnings({"unchecked"})
                 List<String> beforeActions = (List<String>) actionContext.getProperties().computeIfAbsent(TriggerEventProcessorStage.BEFORE_ACTION.toString(), k -> new ArrayList<String>());
                 beforeActions.add(action.getName());
                 triggerListeners1.fireListeners(event.getSource(), event, TriggerEventProcessorStage.BEFORE_ACTION, action.getName(), actionContext);
@@ -330,7 +328,6 @@ public class ScheduledTriggers implements Closeable {
                   triggerListeners1.fireListeners(event.getSource(), event, TriggerEventProcessorStage.FAILED, action.getName(), actionContext, e, null);
                   throw new TriggerActionException(event.getSource(), action.getName(), "Error processing action for trigger event: " + event, e);
                 }
-                @SuppressWarnings({"unchecked"})
                 List<String> afterActions = (List<String>) actionContext.getProperties().computeIfAbsent(TriggerEventProcessorStage.AFTER_ACTION.toString(), k -> new ArrayList<String>());
                 afterActions.add(action.getName());
                 triggerListeners1.fireListeners(event.getSource(), event, TriggerEventProcessorStage.AFTER_ACTION, action.getName(), actionContext);
@@ -352,10 +349,8 @@ public class ScheduledTriggers implements Closeable {
               // resume triggers after cool down period
               resumeTriggers(cloudManager.getTimeSource().convertDelay(TimeUnit.NANOSECONDS, cooldownPeriod.get(), TimeUnit.MILLISECONDS));
             }
-            if (log.isDebugEnabled()) {
-              log.debug("-- processing took {} ms for event id={}",
-                  TimeUnit.NANOSECONDS.toMillis(cloudManager.getTimeSource().getTimeNs() - eventProcessingStart), event.id);
-            }
+            log.debug("-- processing took {} ms for event id={}",
+                TimeUnit.NANOSECONDS.toMillis(cloudManager.getTimeSource().getTimeNs() - eventProcessingStart), event.id);
           });
         } else {
           if (enqueued) {
@@ -430,7 +425,6 @@ public class ScheduledTriggers implements Closeable {
               String path = parentPath + '/' + child;
               VersionedData data = stateManager.getData(path, null);
               if (data != null) {
-                @SuppressWarnings({"rawtypes"})
                 Map map = (Map) Utils.fromJSON(data.getData());
                 String requestid = (String) map.get("requestid");
                 try {
@@ -454,7 +448,7 @@ public class ScheduledTriggers implements Closeable {
                   if (rootCause instanceof TimeoutException && rootCause.getMessage().contains("Could not connect to ZooKeeper")) {
                     throw e;
                   }
-                  log.error("Unexpected exception while waiting for pending task with requestid: {} to finish", requestid,  e);
+                  log.error("Unexpected exception while waiting for pending task with requestid: " + requestid + " to finish", e);
                 }
               }
             }
@@ -480,7 +474,7 @@ public class ScheduledTriggers implements Closeable {
    */
   public synchronized void removeAll() {
     getScheduledTriggerNames().forEach(t -> {
-      log.info("-- removing trigger: {}", t);
+      log.info("-- removing trigger: " + t);
       remove(t);
     });
   }
@@ -503,12 +497,12 @@ public class ScheduledTriggers implements Closeable {
     try {
       stateManager.removeRecursively(statePath, true, true);
     } catch (Exception e) {
-      log.warn("Failed to remove state for removed trigger {}", statePath, e);
+      log.warn("Failed to remove state for removed trigger " + statePath, e);
     }
     try {
       stateManager.removeRecursively(eventsPath, true, true);
     } catch (Exception e) {
-      log.warn("Failed to remove events for removed trigger {}", eventsPath, e);
+      log.warn("Failed to remove events for removed trigger " + eventsPath, e);
     }
   }
 
@@ -516,7 +510,7 @@ public class ScheduledTriggers implements Closeable {
    * @return an unmodifiable set of names of all triggers being managed by this class
    */
   public synchronized Set<String> getScheduledTriggerNames() {
-    return Set.copyOf(scheduledTriggerWrappers.keySet()); // shallow copy
+    return Collections.unmodifiableSet(new HashSet<>(scheduledTriggerWrappers.keySet())); // shallow copy
   }
 
   /**
@@ -635,7 +629,7 @@ public class ScheduledTriggers implements Closeable {
                 // override REPLAYING=true
                 event.getProperties().put(TriggerEvent.REPLAYING, true);
                 if (!trigger.getProcessor().process(event)) {
-                  log.error("Failed to re-play event, discarding: {}", event);
+                  log.error("Failed to re-play event, discarding: " + event);
                 }
                 queue.pollEvent(); // always remove it from queue
               }
@@ -644,14 +638,14 @@ public class ScheduledTriggers implements Closeable {
                 trigger.restoreState();
               } catch (Exception e) {
                 // log but don't throw - see below
-                log.error("Error restoring trigger state {}", trigger.getName(), e);
+                log.error("Error restoring trigger state " + trigger.getName(), e);
               }
               replay = false;
             }
           } catch (AlreadyClosedException e) {
             
           } catch (Exception e) {
-            log.error("Unexpected exception from trigger: {}", trigger.getName(), e);
+            log.error("Unexpected exception from trigger: " + trigger.getName(), e);
           }
           try {
             trigger.run();
@@ -660,7 +654,7 @@ public class ScheduledTriggers implements Closeable {
           } catch (Exception e) {
             // log but do not propagate exception because an exception thrown from a scheduled operation
             // will suppress future executions
-            log.error("Unexpected exception from trigger: {}", trigger.getName(), e);
+            log.error("Unexpected exception from trigger: " + trigger.getName(), e);
           } finally {
             // checkpoint after each run
             trigger.saveState();
@@ -758,7 +752,7 @@ public class ScheduledTriggers implements Closeable {
             try {
               listener.close();
             } catch (Exception e) {
-              log.warn("Exception closing old listener {}", listener.getConfig(), e);
+              log.warn("Exception closing old listener " + listener.getConfig(), e);
             }
             it.remove();
           }
@@ -777,7 +771,7 @@ public class ScheduledTriggers implements Closeable {
               try {
                 oldListener.close();
               } catch (Exception e) {
-                log.warn("Exception closing old listener {}", oldListener.getConfig(), e);
+                log.warn("Exception closing old listener " + oldListener.getConfig(), e);
               }
             } else {
               listener = oldListener; // reuse
@@ -788,7 +782,7 @@ public class ScheduledTriggers implements Closeable {
             try {
               listener = loader.newInstance(clazz, TriggerListener.class);
             } catch (Exception e) {
-              log.warn("Invalid TriggerListener class name '{}', skipping...", clazz, e);
+              log.warn("Invalid TriggerListener class name '" + clazz + "', skipping...", e);
             }
             if (listener != null) {
               try {
@@ -796,7 +790,7 @@ public class ScheduledTriggers implements Closeable {
                 listener.init();
                 listenersPerName.put(config.name, listener);
               } catch (Exception e) {
-                log.warn("Error initializing TriggerListener {}", config, e);
+                log.warn("Error initializing TriggerListener " + config, e);
                 IOUtils.closeQuietly(listener);
                 listener = null;
               }
@@ -902,7 +896,7 @@ public class ScheduledTriggers implements Closeable {
           try {
             listener.onEvent(event, stage, actionName, context, error, message);
           } catch (Exception e) {
-            log.warn("Exception running listener {}", listener.getConfig(), e);
+            log.warn("Exception running listener " + listener.getConfig(), e);
           }
         }
       } finally {
