@@ -353,7 +353,6 @@ public final class ZookeeperInfoHandler extends RequestHandlerBase {
   private PagedCollectionSupport pagingSupport;
 
   @Override
-  @SuppressWarnings({"unchecked"})
   public void handleRequestBody(SolrQueryRequest req, SolrQueryResponse rsp) throws Exception {
     final SolrParams params = req.getParams();
     Map<String, String> map = new HashMap<>(1);
@@ -535,7 +534,7 @@ public final class ZookeeperInfoHandler extends RequestHandlerBase {
       json.writeString("a_attr");
       json.writeNameSeparator();
       json.startObject();
-      String href = "admin/zookeeper?detail=true&path=" + URLEncoder.encode(path, StandardCharsets.UTF_8);
+      String href = "admin/zookeeper?detail=true&path=" + URLEncoder.encode(path, "UTF-8");
       writeKeyValue(json, "href", href, true);
       json.endObject();
 
@@ -688,10 +687,10 @@ public final class ZookeeperInfoHandler extends RequestHandlerBase {
                 if (childData != null)
                   childDataStr = (new BytesRef(childData)).utf8ToString();
               } catch (KeeperException.NoNodeException nne) {
-                log.warn("State for collection {} not found in /clusterstate.json or /collections/{}/state.json!"
-                    , collection, collection);
+                log.warn("State for collection " + collection +
+                    " not found in /clusterstate.json or /collections/" + collection + "/state.json!");
               } catch (Exception childErr) {
-                log.error("Failed to get {} due to", collStatePath, childErr);
+                log.error("Failed to get " + collStatePath + " due to: " + childErr);
               }
 
               if (childDataStr != null) {
