@@ -17,11 +17,11 @@
 package org.apache.solr.search.stats;
 
 import java.io.IOException;
+import java.io.UnsupportedEncodingException;
 import java.lang.invoke.MethodHandles;
 
 import java.net.URLDecoder;
 import java.net.URLEncoder;
-import java.nio.charset.Charset;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -95,7 +95,7 @@ public class StatsUtil {
 
   public static Set<Term> termsFromEncodedString(String data) {
     Set<Term> terms = new HashSet<>();
-    if (data == null || data.isBlank()) {
+    if (data == null || data.trim().isEmpty()) {
       return terms;
     }
     String[] items = data.split(ENTRY_SEPARATOR);
@@ -110,12 +110,12 @@ public class StatsUtil {
 
   public static Set<String> fieldsFromString(String data) {
     Set<String> fields = new HashSet<>();
-    if (data == null || data.isBlank()) {
+    if (data == null || data.trim().isEmpty()) {
       return fields;
     }
     String[] items = data.split(ENTRY_SEPARATOR);
     for (String item : items) {
-      if (!item.isBlank()) {
+      if (!item.trim().isEmpty()) {
         fields.add(item);
       }
     }
@@ -125,7 +125,7 @@ public class StatsUtil {
   public static String fieldsToString(Collection<String> fields) {
     StringBuilder sb = new StringBuilder();
     for (String field : fields) {
-      if (field.isBlank()) {
+      if (field.trim().isEmpty()) {
         continue;
       }
       if (sb.length() > 0) {
@@ -160,7 +160,8 @@ public class StatsUtil {
     }
     String[] vals = data.split(",");
     if (vals.length != 5) {
-      log.warn("Invalid collection stats string, num fields {} != 5 '{}'", vals.length, data);
+      log.warn("Invalid collection stats string, num fields " + vals.length
+          + " != 5, '" + data + "'");
       return null;
     }
     String field = vals[0];
@@ -172,7 +173,8 @@ public class StatsUtil {
       return new CollectionStats(field, maxDoc, docCount, sumTotalTermFreq,
           sumDocFreq);
     } catch (Exception e) {
-      log.warn("Invalid collection stats string '{}', ", data, e);
+      log.warn("Invalid collection stats string '" + data + "': "
+          + e.toString());
       return null;
     }
   }
@@ -202,11 +204,15 @@ public class StatsUtil {
           output.append(c);
       }
     }
-    return URLEncoder.encode(output.toString(), Charset.forName("UTF-8"));
+    try {
+      return URLEncoder.encode(output.toString(), "UTF-8");
+    } catch (UnsupportedEncodingException e) {
+      throw new RuntimeException("Apparently your JVM doesn't support UTF-8 encoding?", e);
+    }
   }
 
   public static String decode(String value) throws IOException {
-    value = URLDecoder.decode(value, Charset.forName("UTF-8"));
+    value = URLDecoder.decode(value, "UTF-8");
     StringBuilder output = new StringBuilder(value.length());
     for (int i = 0; i < value.length(); i++) {
       char c = value.charAt(i);
@@ -231,7 +237,7 @@ public class StatsUtil {
   public static String termToEncodedString(String term) {
     int idx = term.indexOf(':');
     if (idx == -1) {
-      log.warn("Invalid term data without ':': '{}'", term);
+      log.warn("Invalid term data without ':': '" + term + "'");
       return null;
     }
     String prefix = term.substring(0, idx + 1);
@@ -246,7 +252,7 @@ public class StatsUtil {
     }
     int idx = data.indexOf(':');
     if (idx == -1) {
-      log.warn("Invalid term data without ':': '{}'", data);
+      log.warn("Invalid term data without ':': '" + data + "'");
       return null;
     }
     String field = data.substring(0, idx);
@@ -254,7 +260,7 @@ public class StatsUtil {
     try {
        return new Term(field, decode(value));
     } catch (Exception e) {
-      log.warn("Invalid term value '{}'", value);
+      log.warn("Invalid term value '" + value + "'");
       return null;
     }
   }
@@ -275,7 +281,8 @@ public class StatsUtil {
     }
     String[] vals = data.split(",");
     if (vals.length < 3) {
-      log.warn("Invalid term stats string, num fields {} < 3, '{}'", vals.length, data);
+      log.warn("Invalid term stats string, num fields " + vals.length
+          + " < 3, '" + data + "'");
       return null;
     }
     Term term = termFromEncodedString(vals[0]);
@@ -284,7 +291,7 @@ public class StatsUtil {
       long totalTermFreq = Long.parseLong(vals[2]);
       return new TermStats(term.toString(), docFreq, totalTermFreq);
     } catch (Exception e) {
-      log.warn("Invalid termStats string '{}'", data);
+      log.warn("Invalid termStats string '" + data + "'");
       return null;
     }
   }
