@@ -21,7 +21,9 @@ import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
+import java.util.Arrays;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Consumer;
@@ -30,7 +32,7 @@ import org.apache.solr.common.cloud.rule.ImplicitSnitch;
 
 import static java.util.Collections.emptySet;
 import static java.util.Collections.unmodifiableMap;
-
+import static java.util.Collections.unmodifiableSet;
 
 /**
  * A Variable Type used in Autoscaling policy rules. Each variable type may have unique implementation
@@ -275,7 +277,7 @@ public interface Variable {
       this.metricsAttribute = readStr(meta.metricsKey());
       this.supportedComputedTypes = meta.computedValues()[0] == ComputedType.NULL ?
           emptySet() :
-          Set.of(meta.computedValues());
+          unmodifiableSet(new HashSet(Arrays.asList(meta.computedValues())));
       this.wildCards = readSet(meta.wildCards());
 
     }
@@ -295,7 +297,7 @@ public interface Variable {
 
     Set<String> readSet(String[] vals) {
       if (NULL.equals(vals[0])) return emptySet();
-      return Set.of(vals);
+      return unmodifiableSet(new HashSet<>(Arrays.asList(vals)));
     }
 
     @Override
